updated data_loader to allow slicing of popualtion dataframe by county and years

--- a/Project/code/test_notebook.ipynb
+++ b/Project/code/test_notebook.ipynb
@@ -1572,8 +1572,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "79c180e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_year = \"2006\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "8b89b623",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2006\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int(start_year))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56cf341a",
    "metadata": {},
    "outputs": [],
    "source": []
