modified meeting notebook a little bit before meeting

--- a/Project/code/notebooks/aug4_meeting_notebook.ipynb
+++ b/Project/code/notebooks/aug4_meeting_notebook.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "- Convert to case rates given the population value\n",
     "- Linearly interpolate the values\n",
-    "- Started a dashboard but it is not in a good spot right now with the most recent updates (can demo if needed)\n"
+    "- Started a dashboard but isn't perfected yet. Mainly updated to where I am in the code base now. Want to demo if time permits.\n"
    ]
   },
   {
