more data files

--- a/Project/code/notebooks/aug29_meeting_notebook.ipynb
+++ b/Project/code/notebooks/aug29_meeting_notebook.ipynb
@@ -2952,8 +2952,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "080e12d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fung = pd.read_csv(\"../../data/Final_FungicideData.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "898c6f7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fung = df_fung.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0c189914",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fungicide_summed_lbs =(\n",
+    "  df_fung.groupby([\"COUNTY_NAME\", \"Year-Month\"])[\"POUNDS_CHEMICAL_APPLIED\"]\n",
+    "  .sum(min_count = 1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "7782e7f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "COUNTY_NAME  Year-Month\n",
+       "FRESNO       2000-01          0.031250\n",
+       "             2000-02       1862.305293\n",
+       "             2000-03       2726.282281\n",
+       "             2000-04       7492.311048\n",
+       "             2000-05       5687.137561\n",
+       "                              ...     \n",
+       "TULARE       2022-08        117.973703\n",
+       "             2022-09         33.103770\n",
+       "             2022-10        122.812717\n",
+       "             2022-11        926.850587\n",
+       "             2022-12        258.734845\n",
+       "Name: POUNDS_CHEMICAL_APPLIED, Length: 1546, dtype: float64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fungicide_summed_lbs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5635317",
    "metadata": {},
    "outputs": [],
    "source": []
