--- a/Project/code/notebooks/sept18_meeting_notebook.ipynb
+++ b/Project/code/notebooks/sept18_meeting_notebook.ipynb
@@ -2841,7 +2841,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -2855,7 +2855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
